--- a/rust/typ-query/Cargo.toml
+++ b/rust/typ-query/Cargo.toml
@@ -3,6 +3,8 @@ name = "typ-query"
 version = "0.1.0"
 edition = "2021"
 
+build = "build.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -32,4 +34,4 @@ gcloud-sdk = { version = "~0", features = ["google-firestore-v1"] }
 [build-dependencies]
 tonic-build = "~0"
 
-
+helper = { git = "https://github.com/mippo-app/helper.git", branch = "main" }
