--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -5,16 +5,17 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ^3.4.0
 
 dependencies:
 #   path: ^1.8.0
-  grpc: ^3.1.0
-  protobuf: ^2.1.0
+  grpc: ^3.2.4
+  protobuf: ^3.1.0
   typ_p:
     path: ../../../mippo/typ-p/dart/
 
-
+# dart pub get
+# dart pub upgrade --major-versions
 dev_dependencies:
-  lints: ^2.0.0
-  test: ^1.16.0
+  lints: ^4.0.0
+  test: ^1.25.8
