--- a/rust/typ-query/Cargo.toml
+++ b/rust/typ-query/Cargo.toml
@@ -20,7 +20,7 @@ prost-types = "~0"
 
 
 derive_pb = { git = "https://github.com/mippo-app/derive_pb.git", branch = "main" }
-helper = { git = "https://github.com/mippo-app/helper.git", branch = "main" }
+m-helper = { git = "https://github.com/mippo-app/helper.git", branch = "main" }
 typ-p = { git = "https://github.com/mippo-app/typ-p.git", branch = "main" }
 
 uuid = {version = "1", features = ["serde", "v4"]}
@@ -33,5 +33,3 @@ gcloud-sdk = { version = "~0", features = ["google-firestore-v1"] }
 
 [build-dependencies]
 tonic-build = "~0"
-
-helper = { git = "https://github.com/mippo-app/helper.git", branch = "main" }
